# configure-gateway

./: README.md  configure_sites.py  onescript_configure_sites.py  pyproject.toml  site_get_configuration.py
data/auth/: input_credentials.json  input_credentials.yaml  input_token_onlypwd.json
